# selfcustody

./: .gitignore  .gitmodules  CLAUDE.md  README.md  WALLET_FLOW_VISUALIZER.md  design-state.md  pyproject.toml
.github/workflows/: deploy-pages.yml
cloudflare/: README.md  worker.js  wrangler.toml
docs/designpowers/taste/: 2026-04-02-selfcustody-taste.md
research/: sample_newsapi_response.json
selfcustody-mobile/: .env  App.tsx  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  wallet-ia.md
selfcustody-mobile/src/hooks/: useAgentEvents.ts  useApprovalQueue.ts  useCustodyHealth.ts  useNewsDigest.ts  usePortfolioMetrics.ts  usePriceSimulator.ts
selfcustody-mobile/src/mocks/: agents.mock.ts  chat.mock.ts  custody.mock.ts  news.mock.ts  portfolio.mock.ts  staking.mock.ts  transactions.mock.ts
selfcustody-mobile/src/navigation/: ActivityStack.tsx  AgentStack.tsx  DashboardStack.tsx  EarnStack.tsx  MainTabNavigator.tsx  RootNavigator.tsx  SecurityStack.tsx  StakeFlowNavigator.tsx  navigationTypes.ts
selfcustody-mobile/src/services/: agentSimulator.ts  claude.ts  newsdigest.ts  priceSimulator.ts
selfcustody-mobile/src/store/: agentStore.ts  index.ts  portfolioStore.ts  walletStore.ts
selfcustody-mobile/src/theme/: colors.ts  index.ts  spacing.ts  typography.ts
selfcustody-mobile/src/types/: agents.ts  chat.ts  custody.ts  news.ts  portfolio.ts  transactions.ts
src/newsdigest/: __init__.py  api.py  config.py  news.py
src/selfcustody/: __init__.py  keystore.py  models.py  runtime.py
src/web/: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/web/src/: App.tsx
tests/: __init__.py  test_news.py  test_runtime.py
(+48 files in other folders)
