[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "selfcustody"
version = "0.1.0"
description = "Self-custody wallet toolkit scaffold in Python"
readme = "README.md"
authors = [{ name = "Self Custody", email = "maintainers@example.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["wallet", "self-custody", "keys", "signing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.43.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["selfcustody"]
branch = true
